2006-09-11 François Proulx <francois.proulx@gmail.com>
	* Changed install.php req. for Smarty 2.6.17 is mandatory
	* ContentTypeFilter.php fixed the method checking function
	* Fixed errors in French translation file

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix PHPMailer that I've broken earlier

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Slightly rework SSL detection so that it uses the default server if a current one isn't available.
		Fixes server passing passwords in the clear if the hostname disn't match (DOH!).
		We really should properly split the Server class into a singleton Server class and multiple VirtualHost classes.
	* Re-apply fixed HTMLeditor patch.  (Original description:  Make HTMLeditor inherit from Langstring.  Allowed a massive reduction of
	  line count and will stop the codebases from needlessly drifting apart.)

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add missing require of Statistics.php in stats.php

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix non persistent content being available to add to nodes, networks and content groups.
	* Prevent a user from entering the same language twice in a langstring.  Fixes #226

2006-09-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #63
	* Fix problem with my Splash only user fix (I used match on the user_id instead of the username).
	* Prevent the Splash only user from logging out, wrecking havock in the tokens.
	* Do not allow SplashOnlyUser to set his preferences.
	* Assigning a reusable content to a contentgroup element would make it non-reusable.
Usability and UI fixes:
	* Allow other users to log in when they are at a splash only node.
	* Make isSimpleContent class available for Simple content types.  Make it borderless and backgroundless in the default theme_pack.
	* Simplify HTML output for simple content.
	* Fix IE layout bug in node admin
	* Content linked to nodes and networks now edits in a new window.